fixed another alignment issue and removed unnecessary tooltips

--- a/src/main/webapp/app/overview/postings/postings.scss
+++ b/src/main/webapp/app/overview/postings/postings.scss
@@ -101,7 +101,6 @@ $background-color: #353d47;
     height: 2px;
     background: rgba(0, 0, 0, 0.1);
     content: ' ';
-    margin: auto 0;
 }
 
 .answer-posts-line {
